<resources>
    <string name="app_name">My Contact List</string>
    <string name="display_the_list_of_contacts">Display the list of contacts</string>
    <string name="display_the_map">Display the map</string>
    <string name="display_the_settings">Display the settings</string>
    <string name="off">OFF</string>
    <string name="save">SAVE</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="address2">Address</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zipcode">Zipcode</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="e_mail_address">E-Mail Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="sort_contacts_by">Sort Contacts By:</string>
    <string name="name">Name</string>
    <string name="city2">City</string>
    <string name="birthday2">Birthday</string>
    <string name="sort_order">Sort Order:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="select_date">Select Date</string>
    <string name="background_color">Background Color:</string>
    <string name="dark_gray">Dark Gray</string>
    <string name="Yellow">Yellow</string>
    <string name="teal">Teal</string>
    <string name="delete">DELETE</string>
    <string name="_100">100%</string>
    <string name="wnw">WNW</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>